--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
+                <h1 class="text-center"> <i class="fa fa-users mr-2"></i> My Team</h1>
             </div>
         </div>
     </div>
